<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/silakan_daftar_akun_yang_telah_terdaftar"/>
        <EditText
            android:id="@+id/idEdtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder_edt"
            android:hint="@string/email_anda"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="textEmailAddress"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idIDTPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounder_edt"
                android:hint="@string/password_anda"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/idButtonDaftarRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rouder_btn"
            android:text="@string/daftar"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punya_akun"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/idButtonMasukRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rouder_btn"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/masuk"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>